Add search smashlist
