# Controllers/SmashList.js
@@ -128,3 +128,15 @@ exports.GetAllSmashList = async (req, res, next) => {
     next({ status: 500, message: "Internal Server Error" });
   }
 }
+
+exports.GetAllSmashListFromSearch = async (req, res, next) => {
+  try {
+    const Search = req.query.search;
+    const Smashlist = await SmashList.GetAllSmashListFromSearch(Search);
+    if (!Smashlist) return next({ status: 404, message: "SmashList not found" });
+    res.status(200).send({ error: false, message: "SmashList found", data: Smashlist });
+  } catch (error) {
+    console.log(error);
+    next({ status: 500, message: "Internal Server Error" });
+  }
+}
