# Routes/SmashList.js
@@ -21,5 +21,5 @@ router.get('/smashlist/length', SmashListController.GetSmashListLength);
 router.get('/smashlist/user', SmashListController.GetSmashListFromUser);
 router.get('/smashlist/category', SmashListController.GetSmashListFromCategory);
 router.get('/smashlist/all', SmashListController.GetAllSmashList);
-
+router.get('/smashlist/search', SmashListController.GetAllSmashListFromSearch);
 module.exports = router;
